Add search service and implement rabbitmq